<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.UPMC">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_timer"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_study"
        android:icon="@drawable/ic_action_participant"
        android:orderInCategory="200"
        android:title="@string/participant"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dnd"
        android:icon="@drawable/do_not_disturb_off_white_24x24"
        android:orderInCategory="100"
        android:title="@string/do_not_disturb"
        app:showAsAction="always" />

    <item
        android:id="@+id/study_sync"
        android:icon="@drawable/ic_stat_aware_sync"
        android:orderInCategory="101"
        android:title="@string/sync"
        app:showAsAction="never" />


</menu>
